--- a/RecipeService/RecipeService.csproj
+++ b/RecipeService/RecipeService.csproj
@@ -67,6 +67,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Objects\RecipeObject.cs" />
     <Compile Include="Returns\RecipeResult.cs" />
     <Compile Include="RecipeService.svc.cs">
       <DependentUpon>RecipeService.svc</DependentUpon>
